[gd_scene load_steps=2 format=2]

[ext_resource path="res://project/utilities/RandomEventGenerator.gd" type="Script" id=1]

[node name="RandomEventGenerator" type="Node"]
script = ExtResource( 1 )

[node name="EventTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="EventTimer" to="." method="_on_RandomEventTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
